add fetch category and detail adBYcat to display

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -7,4 +7,13 @@
     padding: 10px;
     background-color: white;
   }
+  .categories-navigation {
+    font-size: 12px;
+    font-weight: bold;
+    color: #666;
+    padding: 16px 10px 6px;
+    white-space: nowrap;
+    overflow-x: scroll;
+  }
+
   
