--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,18 +4,18 @@
 
 body {
   margin: 0;
-  padding : 1rem;
+  padding: 1rem;
   font-family:
     system-ui,
     -apple-system,
     BlinkMacSystemFont,
-    "Segoe UI",
+    'Segoe UI',
     Roboto,
     Oxygen,
     Ubuntu,
     Cantarell,
-    "Open Sans",
-    "Helvetica Neue",
+    'Open Sans',
+    'Helvetica Neue',
     sans-serif;
   background-color: #f5f5f5;
 }
@@ -28,7 +28,10 @@ h1 {
 .m-1 {
   margin: 1rem;
 }
-
+.my-1 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
 
 .main-menu {
   display: flex;
@@ -101,8 +104,6 @@ h1 {
   padding: 0 16px;
   margin: 120px auto 48px;
 }
-
-
 
 @media screen and (min-width: 720px) {
   .mobile-short-label {
