--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,7 +32,14 @@ h1 {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+.d-flex {
+  display: flex;
+  gap: '10px';
+}
 
+.flex-col {
+  flex-direction: column;
+}
 .main-menu {
   display: flex;
   justify-content: space-between;
@@ -112,4 +119,67 @@ h1 {
   .desktop-long-label {
     display: initial;
   }
+}
+
+/* formms */
+.form-ad {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 1rem 5rem;
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 3rem;
+}
+
+/* Style des étiquettes */
+.form-ad label {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+/* Style des champs de texte et de sélection */
+.form-ad input[type='text'],
+.form-ad select {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+.form-ad select {
+  transition:
+    border-color 0.3s ease,
+    box-shadow 0.3s ease; /* Transition pour l'animation au survol */
+}
+.form-ad select:hover {
+}
+.form-ad select:focus {
+  outline: none; /* Supprimer la bordure par défaut au focus */
+  border-color: #ffa41b; /* Couleur de la bordure active (inset) */
+  background-color: #f0f0f0; /* Couleur de fond lorsque la select est active */
+}
+.form-ad select:hover option {
+  color: #ffa41b; /* Couleur du texte des options */
+}
+/* Style du bouton */
+.form-ad button {
+  padding: 10px 20px;
+  background-color: #ffa41b;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+/* Style du bouton au survol */
+.form-ad button:hover {
+  background-color: white;
+  color: #ffa41b;
+  border: 2px solid #ffa41b;
+  transition: all 0.3s ease-in-out;
+  transform: scale(1.03);
 }
