--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,6 +20,24 @@ body {
   background-color: #f5f5f5;
 }
 
+/* Styles de la scrollbar */
+*::-webkit-scrollbar {
+  width: 5px; 
+  height: 5px;
+}
+
+
+*::-webkit-scrollbar-thumb {
+  background-color: #ffa41b;; 
+  border-radius: 6px; 
+}
+
+*::-webkit-scrollbar-track {
+  background-color: #ccc;
+  border-radius: 6px; 
+}
+
+
 h1 {
   margin: 0;
 }
